# oneload

./: LICENSE  Procfile  README.md  app.py  dotenv  effective-pom.xml  pom.xml  pyproject.toml
app/: __init__.py  routes.py
