[tool.poetry]
name = "onedload"
version = "1.0.0"
description = "An application to convert YouTube URLs to MP3"
authors = ["Jako <jakocrazykings@gmail.com.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.1.1"
gunicorn = "^20.1.0"
yt-dlp = "^2023.03.04"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
